@@ -6,6 +6,9 @@ version 2.8.1 (MM/DD/YYYY):
 	Pidgin:
 	* Fix Conversation->Add on AIM and MSN.
 
+	Finch:
+	* Fixed logging in to ICQ.
+
 	libpurple:
 	* media: Actually use the specified TCP port from the TURN configuration to
 	  create a TCP relay candidate.
